[package]
name = "galactic-unicorn-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
galactic-unicorn-embassy = { version = "0.1.0", git = "https://github.com/domneedham/pimoroni-unicorn-rs" }
unicorn-graphics = { version = "0.1.0", git = "https://github.com/domneedham/pimoroni-unicorn-rs" }
embedded-graphics = "0.7.1"
embedded-graphics-core = "0.3.3"

cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.0"
embassy-rp = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy", features = [
    "defmt",
    "unstable-pac",
    "time-driver",
] }
embassy-time = { version = "0.2.0", git = "https://github.com/embassy-rs/embassy", features = [
    "defmt",
    "defmt-timestamp-uptime",
] }
embassy-executor = { version = "0.4.0", git = "https://github.com/embassy-rs/embassy", features = [
    "arch-cortex-m",
    "executor-thread",
    "executor-interrupt",
    "defmt",
    "integrated-timers",
] }
defmt = "0.3"
defmt-rtt = "0.3"
panic-probe = { version = "0.3", features = ["print-defmt"] }
panic-halt = "0.2.0"
static_cell = "2"
portable-atomic = { version = "1.5", features = ["critical-section"] }

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false

# do not optimize proc-macro crates = faster builds from scratch
[profile.dev.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[profile.release.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false
