[package]
name = "galactic-unicorn-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
galactic-unicorn-embassy = { version = "0.1.1", git = "https://github.com/domneedham/pimoroni-unicorn-rs" }
unicorn-graphics = { version = "0.1.1", git = "https://github.com/domneedham/pimoroni-unicorn-rs" }
embedded-graphics = "0.7.1"
embedded-graphics-core = "0.3.3"

cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.0"
embassy-sync = { version = "0.5.0", git = "https://github.com/embassy-rs/embassy", features = [
    "defmt",
] }
embassy-rp = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy", features = [
    "defmt",
    "unstable-pac",
    "time-driver",
] }
embassy-time = { version = "0.3.0", git = "https://github.com/embassy-rs/embassy", features = [
    "defmt",
    "defmt-timestamp-uptime",
] }
embassy-executor = { version = "0.5.0", git = "https://github.com/embassy-rs/embassy", features = [
    "arch-cortex-m",
    "executor-thread",
    "executor-interrupt",
    "defmt",
    "integrated-timers",
    "task-arena-size-32768",
] }
embassy-net = { version = "0.4.0", git = "https://github.com/embassy-rs/embassy", features = [
    "defmt",
    "tcp",
    "udp",
    "dhcpv4",
    "medium-ethernet",
] }
embassy-futures = { version = "0.1.1", git = "https://github.com/embassy-rs/embassy" }
cyw43 = { git = "https://github.com/embassy-rs/embassy", features = [
    "defmt",
    "firmware-logs",
] }
cyw43-pio = { git = "https://github.com/embassy-rs/embassy", features = [
    "defmt",
    "overclock",
] }

defmt = "0.3"
defmt-rtt = "0.3"
panic-probe = { version = "0.3", features = ["print-defmt"] }
panic-halt = "0.2.0"
static_cell = "2"
portable-atomic = { version = "1.5", features = ["critical-section"] }
heapless = "0.8.0"
rust-mqtt = { version = "0.2.0", features = [
    "no_std",
], default-features = false }

[patch.crates-io]
embassy-embedded-hal = { git = "https://github.com/embassy-rs/embassy", rev = "8b36a32ed5d834b23e970d5b723dd7df1f1c94a2" }
embassy-sync = { git = "https://github.com/embassy-rs/embassy", rev = "8b36a32ed5d834b23e970d5b723dd7df1f1c94a2" }
embassy-executor = { git = "https://github.com/embassy-rs/embassy", rev = "8b36a32ed5d834b23e970d5b723dd7df1f1c94a2" }
embassy-time = { git = "https://github.com/embassy-rs/embassy", rev = "8b36a32ed5d834b23e970d5b723dd7df1f1c94a2" }
embassy-rp = { git = "https://github.com/embassy-rs/embassy", rev = "8b36a32ed5d834b23e970d5b723dd7df1f1c94a2" }
embassy-futures = { git = "https://github.com/embassy-rs/embassy", rev = "8b36a32ed5d834b23e970d5b723dd7df1f1c94a2" }
## network support
embassy-net = { git = "https://github.com/embassy-rs/embassy", rev = "8b36a32ed5d834b23e970d5b723dd7df1f1c94a2" }
## pico-w support
cyw43 = { git = "https://github.com/embassy-rs/embassy", rev = "8b36a32ed5d834b23e970d5b723dd7df1f1c94a2" }
cyw43-pio = { git = "https://github.com/embassy-rs/embassy", rev = "8b36a32ed5d834b23e970d5b723dd7df1f1c94a2" }

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 's'
overflow-checks = true

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false

# do not optimize proc-macro crates = faster builds from scratch
[profile.dev.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[profile.release.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 's'
overflow-checks = true

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
