[package]
name = "galactic-unicorn-rs"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
galactic-unicorn-embassy = { version = "0.4.0", git = "https://github.com/domneedham/pimoroni-unicorn-rs" }
unicorn-graphics = { version = "0.2.1", git = "https://github.com/domneedham/pimoroni-unicorn-rs" }
embedded-graphics = "0.7.1"
embedded-graphics-core = "0.3.3"

cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.0"
embassy-sync = { version = "0.5.0", features = ["defmt"] }
embassy-rp = { version = "0.1.0", features = [
    "defmt",
    "unstable-pac",
    "time-driver",
] }
embassy-time = { version = "0.3.0", features = [
    "defmt",
    "defmt-timestamp-uptime",
] }
embassy-executor = { version = "0.5.0", features = [
    "arch-cortex-m",
    "executor-thread",
    "executor-interrupt",
    "defmt",
    "integrated-timers",
    "nightly",
] }
embassy-net = { version = "0.4.0", features = [
    "defmt",
    "tcp",
    "udp",
    "dhcpv4",
    "medium-ethernet",
    "dns",
] }
embassy-futures = { version = "0.1.1" }
cyw43 = { version = "0.1.0", features = ["defmt", "firmware-logs"] }
cyw43-pio = { version = "0.1.0", features = ["defmt", "overclock"] }

defmt = "0.3"
defmt-rtt = "0.3"
panic-probe = { version = "0.3", features = ["print-defmt"] }
panic-halt = "0.2.0"
static_cell = { version = "2", features = ["nightly"] }
portable-atomic = { version = "1.5", features = ["critical-section"] }
heapless = "0.8.0"
rust-mqtt = { version = "0.2.0", features = [
    "no_std",
], default-features = false }

thiserror-no-std = "2.0"
sntpc = { version = "0.3.4", features = ["async"], default-features = false }
no-std-net = "0.6"
chrono = { version = "0.4", default-features = false }
chrono-tz = { version = "0.9.0", default-features = false }
micromath = "2.1.0"
strum = { version = "0.26", default-features = false }
strum_macros = { version = "0.26", default-features = false }
constcat = "0.5.0"

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 's'
overflow-checks = true

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false

# do not optimize proc-macro crates = faster builds from scratch
[profile.dev.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[profile.release.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 's'
overflow-checks = true

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
